add check for icons

--- a/component-library/components/generic/button/button.bookshop.yml
+++ b/component-library/components/generic/button/button.bookshop.yml
@@ -12,6 +12,7 @@ blueprint:
   text: "Hello World!"
   variant: "secondary"
   disabled: true
+  arrow: "up"
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
