add onlcick and id props

--- a/component-library/components/generic/button/button.bookshop.yml
+++ b/component-library/components/generic/button/button.bookshop.yml
@@ -3,21 +3,42 @@ spec:
   structures:
   label: "Button"
   description:
-  icon:
+  icon: smart_button
   tags: []
 
 # Defines the structure of this component, as well as the default values
 blueprint:
   url: "#"
   text: "Hello World!"
-  variant: "secondary"
-  disabled: true
-  arrow: "up"
+  variant: "primary"
+  disabled: false
+  arrow: "right"
+  onclick: ""
+  id: ""
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
   url: "#"
   text: "Hello World!"
+  variant: "primary"
+  disabled: false
+  arrow: "right"
+  onclick: console.log("test")
+  id: ""
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
+  arrow:
+    type: select
+    options:
+      values:
+        - up
+        - right
+        - down
+        - left
+  variant:
+    type: select
+    options:
+      values:
+        - primary
+        - secondary
