--- a/component-library/components/generic/social-icons/social-icons.bookshop.yml
+++ b/component-library/components/generic/social-icons/social-icons.bookshop.yml
@@ -1,6 +1,7 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
+    - content_blocks
   label: "Social Icons"
   description: Icon links to social media platforms
   icon: diversity_3
@@ -23,8 +24,6 @@ blueprint:
     icon_background_hover_color: "#f9f9fb"
     icon_color: "#f9f9fb"
     icon_hover_color: "#000000"
-
-   
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
