--- a/component-library/components/generic/form/radio-input/radio-input.bookshop.yml
+++ b/component-library/components/generic/form/radio-input/radio-input.bookshop.yml
@@ -9,17 +9,20 @@ spec:
 # Defines the structure of this component, as well as the default values
 blueprint:
   label: ""
-  id:
+  group_name:
   checked: false
   required: false
+  id:
   
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
   label: "Radio button"
-  id: radio-button
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
-  id:
+  group_name:
     hidden: true
     comment: This input should be hidden from editors and passed through from the radio-group component so that these inputs function correctly
+  id:
+    hidden: true
+    instance_value: UUID
