--- a/component-library/components/generic/form/date-input/date-input.bookshop.yml
+++ b/component-library/components/generic/form/date-input/date-input.bookshop.yml
@@ -9,8 +9,8 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  name_and_id: ""
   label: ""
+  id:
   required: false
   min:
   max:
@@ -19,11 +19,11 @@ blueprint:
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
   label: Choose a date
-  name_and_id: date
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
-  name_and_id:
-    comment: Provides a unique identifier for the input
+  id:
+    hidden: true
+    instance_value: UUID
   helper_text:
     comment: Helpful text for the user such as 'The date should be after today'
