--- a/component-library/components/generic/form/time-input/time-input.bookshop.yml
+++ b/component-library/components/generic/form/time-input/time-input.bookshop.yml
@@ -11,7 +11,7 @@ spec:
 blueprint:
   label: ""
   placeholder: ""
-  name_and_id: ""
+  id:
   helper_text:
   min:
   max:
@@ -19,14 +19,14 @@ blueprint:
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
   label: Choose a time slot
-  name_and_id: time
   placeholder: 15:00
   min: 09:00
   max: 17:00
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
-  name_and_id:
-    comment: Provides a unique identifier for the input
+  id:
+    hidden: true
+    instance_value: UUID
   helper_text:
     comment: Helpful text for the user such as 'Pick a time between 9:00 and 17:00'
