--- a/component-library/components/generic/form/radio-button-group/radio-button-group.bookshop.yml
+++ b/component-library/components/generic/form/radio-button-group/radio-button-group.bookshop.yml
@@ -14,7 +14,7 @@ blueprint:
   required: false
   radio_buttons: 
     - label:
-      checked:
+      checked: false
   arrangement: inline
   helper_text:
 
