Fix: CloudCannon preview

--- a/component-library/components/generic/button/button.bookshop.yml
+++ b/component-library/components/generic/button/button.bookshop.yml
@@ -43,6 +43,4 @@ _inputs:
         - primary
         - secondary
   onclick:
-    type: hidden
-  open_in_new_tab:
-    hidden: url
+    hidden: true
