Fix: change input name

--- a/component-library/components/generic/icon/icon.bookshop.yml
+++ b/component-library/components/generic/icon/icon.bookshop.yml
@@ -8,7 +8,7 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  svg_icon: academic-cap
+  hero_icon_name: academic-cap
   icon_size: small
   icon_type: solid
   rounded_border: false
@@ -33,7 +33,7 @@ _inputs:
       values:
         - solid
         - outline
-  svg_icon:
+  hero_icon_name:
     comment: Visit https://heroicons.com/ to see the full library
     type: select
     options:
