--- a/component-library/components/generic/form/time-input/time-input.bookshop.yml
+++ b/component-library/components/generic/form/time-input/time-input.bookshop.yml
@@ -1,6 +1,7 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
+    - form_blocks
   label: "Time-input"
   description: Time selection input
   icon: alarm
