--- a/component-library/components/sections/hero/hero.bookshop.yml
+++ b/component-library/components/sections/hero/hero.bookshop.yml
@@ -19,7 +19,7 @@ blueprint:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
-  variant: left-right-feature
+  variant: background-image-feature
   background:
     image:
       _bookshop_name: generic/image
