--- a/component-library/components/sections/contact-block/contact-block.bookshop.yml
+++ b/component-library/components/sections/contact-block/contact-block.bookshop.yml
@@ -2,17 +2,60 @@
 spec:
   structures:
     - content_blocks
-  label: "Contact-block"
-  description:
-  icon:
+  label: "Contact block"
+  description: Contact content block
+  icon: side_navigation
   tags: []
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  text: "Hello World!"
+  content:
+    heading: bookshop:generic/component-heading
+    description: 
+    button: bookshop:generic/button    
+    icons: [bookshop:generic/labelled-icon]
+  styles:
+    orientation:
+    image:
+    background_variant: light
+
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
+  data:
+    heading:
+      bookshop: generic/component-heading
+      eyebrow_headline: Let your features shine
+      primary_heading: A featured icons left right block
+    content: Content
+    button:
+    icons:
+      - bookshop: generic/labelled-icon
+        arrangement: inline
+        text: Icon text
+        icon:
+          bookshop: generic/icon
+          svg_icon: solid/academic-cap
+          icon_size: small
+          rounded_border: true
+  styles:
+    orientation: Left
+    image: http://placekitten.com/500/500
+    background_variant: "Dark"
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
+  orientation:
+    type: select
+    options:
+      values:
+        - Left
+        - Right  
+  description:
+    type: textarea
+  background_variant:
+    type: select
+    options:
+      values:
+        - 'Dark'
+        - 'Light'
