--- a/component-library/components/sections/contact-block/contact-block.bookshop.yml
+++ b/component-library/components/sections/contact-block/contact-block.bookshop.yml
@@ -10,13 +10,13 @@ spec:
 # Defines the structure of this component, as well as the default values
 blueprint:
   content:
+    social_media_links: [bookshop:generic/labelled-icon]
     heading: bookshop:generic/component-heading
     description: 
+    contact_details: [bookshop:generic/labelled-icon]
     button: bookshop:generic/button    
-    icons: [bookshop:generic/labelled-icon]
   styles:
     orientation:
-    image:
     background_variant: light
 
 
@@ -25,37 +25,19 @@ preview:
   data:
     heading:
       bookshop: generic/component-heading
-      eyebrow_headline: Let your features shine
-      primary_heading: A featured icons left right block
+      primary_heading: A contact block
     content: Content
     button:
     icons:
       - bookshop: generic/labelled-icon
         arrangement: inline
         text: Icon text
-        icon:
-          bookshop: generic/icon
-          svg_icon: solid/academic-cap
-          icon_size: small
-          rounded_border: true
+        icon: bookshop:generic/icon
   styles:
     orientation: Left
-    image: http://placekitten.com/500/500
-    background_variant: "Dark"
+    background_variant: dark
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
-  orientation:
-    type: select
-    options:
-      values:
-        - Left
-        - Right  
   description:
     type: textarea
-  background_variant:
-    type: select
-    options:
-      values:
-        - 'Dark'
-        - 'Light'
