--- a/component-library/components/sections/contact-block/contact-block.bookshop.yml
+++ b/component-library/components/sections/contact-block/contact-block.bookshop.yml
@@ -10,7 +10,7 @@ spec:
 # Defines the structure of this component, as well as the default values
 blueprint:
   content:
-    social_media_links: [bookshop:generic/labelled-icon]
+    social_media_links: bookshop:generic/social-icons!
     heading: bookshop:generic/component-heading
     description: 
     contact_details: [bookshop:generic/labelled-icon]
